# paredit-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  REFACTORING_AUDIT.md  RELEASE.md  RELEASING.md  ROADMAP.md  SECURITY.md  SKILLS.md  SUPPORT.md  action.yml  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  main.yml
benches/: similarity_report.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  agents.md  architecture.md  commands.md  development.md  installation.md  integrations.md  releases.md  repository.md  safety.md  selectors.md  workflows.md
proptest-regressions/application/usecase/: rename.txt
skills/paredit-cli/: SKILL.md
src/: dialect.rs  lib.rs  main.rs  sexpr.rs
src/application/: call_graph_report.rs  dependency_report.rs  form_report.rs  form_shape.rs  form_similarity.rs  impact_report.rs  let_report.rs  mod.rs  workspace_report.rs
src/application/call_graph_report/: graph.rs  policy.rs  syntax.rs  types.rs
src/application/call_report/: collect.rs  syntax.rs  tests.rs  types.rs
src/application/definition_report/: collect.rs  policy.rs  tests.rs
src/application/dependency_report/: collect.rs  defpackage.rs  syntax.rs  tests.rs
src/application/duplicate_report/: reports.rs  tests.rs
src/application/impact_report/: policy.rs  references.rs  summary.rs  syntax.rs  tests.rs  types.rs
src/application/let_report/: collect.rs  tests.rs  types.rs
src/application/package_report/: analyze.rs  collect.rs  syntax.rs
src/application/refactor/: execute.rs  mod.rs  plan.rs  preview.rs
src/application/signature_report/: calls.rs  collect.rs  policy.rs  syntax.rs  tests.rs  types.rs
src/application/usecase/: call_graph_report.rs  callable_scope.rs  conditional_sugar.rs  inline_let.rs  (+51 more)
src/domain/: binding_index.rs  call_graph_report.rs  call_report.rs  conditional_sugar.rs  convert_control.rs  convert_sequential_binding.rs  definition.rs  definition_reference.rs  definition_report.rs  dialect.rs  duplicate_report.rs  extract_constant.rs  extract_function.rs  extract_local_function.rs  extract_shared.rs  flet_composition.rs  form_report.rs  form_shape.rs  form_similarity.rs  function_parameter.rs  impact_report.rs  inline_function.rs  inline_lambda.rs  inline_let.rs  inline_literal_constant.rs  inline_local_function.rs  inline_symbol_macro.rs  introduce_let.rs  leading_trivia.rs  let_binding.rs  let_composition.rs  let_report.rs  let_star_composition.rs  lexical_scope.rs  local_function_binding.rs  mod.rs  package.rs  progn.rs  refactor_execute.rs  refactor_plan.rs  (+17 more)
src/infrastructure/: fs_identity.rs  mod.rs  workspace.rs
src/presentation/: cli.rs  mod.rs
tests/: cli.rs
tests/cli/: action_contract.rs  analysis_report.rs  basic_edit_write.rs  bug_report_contract.rs  call_graph_report.rs  call_report.rs  capabilities_contract.rs  changelog_contract.rs  compatibility_docs_contract.rs  completions_contract.rs  conditional_conversion.rs  conduct_docs_contract.rs  contributing_contract.rs  convert_cond_to_if.rs  convert_flet_to_labels.rs  convert_if_to_cond.rs  convert_labels_to_flet.rs  convert_let_star_to_let.rs  convert_let_to_let_star.rs  convert_sequential_binding.rs  crate_metadata_contract.rs  definition_movement.rs  definition_removal.rs  definition_report.rs  dependency_report.rs  dialect_contract.rs  duplicate_report.rs  edit_transpose.rs  eliminate_empty_binding_form.rs  extract_function.rs  feature_request_contract.rs  flatten_progn.rs  form_report.rs  format.rs  function_parameter.rs  governance_contract.rs  help_contract.rs  impact_report.rs  incident_response_contract.rs  inline_function.rs  (+48 more)
tests/fixtures/: common_lisp_outline.lisp  sample.el  system.asd
(+1329 files in other folders)
