[package]
name = "paredit-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Structure-editing CLI for safe S-expression refactoring by AI coding agents"
repository = "https://github.com/takeokunn/paredit-cli"
homepage = "https://github.com/takeokunn/paredit-cli"
readme = "README.md"
keywords = ["lisp", "paredit", "refactoring", "cli", "sexp"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "CONTRIBUTING.md",
    "LICENSE",
    "README.md",
    "SKILLS.md",
    "src/**/*.rs",
    "tests/**/*.rs",
    "tests/fixtures/*",
]

[[bin]]
name = "paredit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"
