[package]
name = "paredit-cli"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Structure-editing CLI for safe S-expression refactoring by AI coding agents"
repository = "https://github.com/takeokunn/paredit-cli"
homepage = "https://github.com/takeokunn/paredit-cli"
documentation = "https://docs.rs/paredit-cli"
readme = "README.md"
keywords = ["lisp", "paredit", "refactoring", "cli", "sexp"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/CHANGELOG.md",
    "/CODE_OF_CONDUCT.md",
    "/COMPATIBILITY.md",
    "/Cargo.lock",
    "/Cargo.toml",
    "/CONTRIBUTING.md",
    "/GOVERNANCE.md",
    "/LICENSE",
    "/MAINTAINERS.md",
    "/README.md",
    "/RELEASE.md",
    "/ROADMAP.md",
    "/SECURITY.md",
    "/SKILLS.md",
    "/SUPPORT.md",
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/tests/fixtures/*",
]

[[bin]]
name = "paredit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
proptest = "1.11"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"
