[package]
name = "paredit-cli"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Structure-editing CLI for safe S-expression refactoring by AI coding agents"
repository = "https://github.com/takeokunn/paredit-cli"
homepage = "https://github.com/takeokunn/paredit-cli"
documentation = "https://docs.rs/paredit-cli"
readme = "README.md"
keywords = ["lisp", "paredit", "refactoring", "cli", "sexp"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/.github/workflows/ci.yml",
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/action.yml",
    "/docs/src/commands.md",
    "/docs/src/integrations.md",
    "/flake.nix",
    "/skills/paredit-cli/SKILL.md",
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/tests/fixtures/*",
]

[[bin]]
name = "paredit"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
cap-std = "4.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.5"
libc = "0.2"
serde_json = "1.0"
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
xattr = "1.6"

[dev-dependencies]
assert_cmd = "2.2"
criterion = "0.5.1"
predicates = "3.1"
proptest = "1.11"

[[bench]]
name = "similarity_report"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"
